src/index.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: 'Poppins', sans-serif;
  height: 100vh;
  background-color: rgba(251, 248, 248, 0.78);
  color: #4C4646;
}

a {
  text-decoration: none;
}

p {
  line-height: 1.7;
}

.container {
  width: 100%;
  margin: 0 auto;
  padding-top: 4rem;
}

.section-line {
  border-top: 1px solid rgba(0,0,0,.1);
}

